Enable hover for tooltips. Fix tooltip bugs on mobile. Host littlefoot locally for speed: https://discourse.gohugo.io/t/littlefoot-for-fancy-popup-footnotes/23991

--- a/static/css/blackburn.css
+++ b/static/css/blackburn.css
@@ -359,13 +359,13 @@ span.basic, span.intermediate, span.advanced, span.mixed {
   text-decoration: none;
 }
 
-@media (min-width: 48em) {
+@media (min-width: 720px) {
   .mobile-bar {
 	display: none;
   }
 }
 
-@media (max-width: 48em) {
+@media (max-width: 720px) {
   .mobile-bar {
 	display: flex;
   }
